--- a/logout.html
+++ b/logout.html
@@ -72,7 +72,7 @@
 </center>
 <script type="text/javascript" >
         var mydata = JSON.parse(data);
-        var title = document.getElementById('title').innerHTML = mydata[0].nama ;
+        var title = document.getElementById('title').innerHTML = mydata[0].name ;
 </script>
 </body>
 </html>
