--- a/status.html
+++ b/status.html
@@ -46,7 +46,7 @@ $(endif)
         <div style="text-align: center; font-weight:bold; margin-top:10px;">Selamat datang</div>
         <div id="user" style="text-align: center; font-weight:bold; margin-top:10px;">$(username)</div> 
       $(endif) 
-    <div class="notif" id="notifikasi"></div>
+    <div class="notif" id="notification"></div>
     <div style="padding:10px;"><a class="a" id="cek" href="./detail.html"></a></div>
     <form action="$(link-logout)" name="logout" onSubmit="return openLogout()">
     
@@ -102,13 +102,13 @@ $(endif)
     </center>
     <script type="text/javascript" >
         var mydata = JSON.parse(data);
-        document.getElementById('title').innerHTML =  mydata[0].nama ;
-        document.getElementById('cek').innerHTML =  mydata[5].masaaktif ;
-        document.getElementById('notifikasi').innerHTML =  mydata[7].notifikasi ;
+        document.getElementById('title').innerHTML =  mydata[0].name ;
+        document.getElementById('cek').innerHTML =  mydata[5].Active time ;
+        document.getElementById('notification').innerHTML =  mydata[7].notification ;
         //get vaidity
         var usr = document.getElementById('user').innerHTML
         var url = "https://example.com/status/status.php?name="; // http://ip-server-mikhmon/mikhmonv2/status/status.php?name=
-        var SessionName = "wifijoss"
+        var SessionName = "kate"
         var getvalid = url+usr+"&session="+SessionName
         document.getElementById('exp').src = getvalid;	
         // jika kurang jelas silakan kunjungi https://laksa19.github.io/tuttorial.html
